--- a/artistas.html
+++ b/artistas.html
@@ -32,7 +32,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="home.html">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="artistas.html">Artistas</a>
@@ -379,7 +379,7 @@
 
                     <ul class="site-footer-links">
                         <li class="site-footer-link-item">
-                            <a href="home.html" class="site-footer-link">Inicio</a>
+                            <a href="index.html" class="site-footer-link">Inicio</a>
                         </li>
                         <li class="site-footer-link-item">
                             <a href="artistas.html" class="site-footer-link">Artistas</a>
