--- a/cronograma.html
+++ b/cronograma.html
@@ -19,7 +19,7 @@
     <!-- barra de navegacion -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="#">
+            <a class="navbar-brand fw-bold" href="index.html">
                 Tecsup Live
             </a>
 
